-_beginAnimatedResizeWithUpdates: can leave view in bad state if called during an existing animation https://bugs.webkit.org/show_bug.cgi?id=187739 Source/WebKit:

Reviewed by Tim Horton.

It's not enough to reset _dynamicViewportUpdateMode to NotResizing; other parts of the code
check whether _resizeAnimationView is non-nil, the contentView may be hidden, etc. Add a new
internal method _cancelAnimatedResize that cleans up state when a call to
_beginAnimatedResizeWithUpdates: fails.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _processDidExit]):
(-[WKWebView _cancelAnimatedResize]):
(-[WKWebView _didCompleteAnimatedResize]):
(-[WKWebView _beginAnimatedResizeWithUpdates:]):

Tools:

<rdar://problem/42304518>

Reviewed by Tim Horton.

* TestWebKitAPI/Tests/WebKitCocoa/AnimatedResize.mm:
(TEST):


Canonical link: https://commits.webkit.org/202972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233927 268f45cc-cd09-0410-ab3c-d52691b4dbfc